[tool.poetry]
name = "data-structures-and-algorithms"
version = "0.1.0"
description = ""
authors = ["Eugene Monnier <eugene.monnier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.2"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
